# Mapify

./: PROJECT_SUMMARY.md  README.md  README_WEBAPP.md  kolkata_pathfinder.py  pyproject.toml  requirements.txt  start_webapp.py  web_app.py
static/css/: style.css
static/js/: app.js
templates/: index.html
