[project]
name = "mapify"
version = "0.1.0"
description = "Kolkata City Pathfinder web application"
requires-python = ">=3.12"
dependencies = [
    "osmnx>=1.6.0",
    "networkx>=3.0",
    "matplotlib>=3.5.0",
    "folium>=0.14.0",
    "geopandas>=0.13.0",
    "geopy>=2.3.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]

[tool.vercel]
entrypoint = "web_app:app"
